[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/GUI.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeLabel" type="Label" parent="."]
visible = false
margin_left = 16.0
margin_top = 24.0
margin_right = 98.0
margin_bottom = 38.0
text = "Game Code: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 56.0
margin_bottom = 38.0
text = "Info:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Node2D" parent="."]
position = Vector2( 16, 24 )

[node name="Host" type="Button" parent="Menu"]
margin_left = 392.58
margin_top = 256.0
margin_right = 480.58
margin_bottom = 280.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Menu"]
margin_left = 504.0
margin_top = 256.0
margin_right = 591.0
margin_bottom = 280.0
text = "Join"

[node name="GameCode" type="LineEdit" parent="Menu"]
margin_left = 392.0
margin_top = 184.0
margin_right = 592.0
margin_bottom = 208.0
placeholder_text = "game code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameCodeLabel" type="Label" parent="Menu"]
margin_left = 304.0
margin_top = 184.0
margin_right = 382.0
margin_bottom = 208.0
text = "Game Code: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="LineEdit" parent="Menu"]
margin_left = 392.0
margin_top = 216.0
margin_right = 592.0
margin_bottom = 240.0
placeholder_text = "player name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNameLabel" type="Label" parent="Menu"]
margin_left = 304.0
margin_top = 216.0
margin_right = 382.0
margin_bottom = 240.0
text = "Name: "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/Host" to="." method="host_server"]
[connection signal="pressed" from="Menu/Join" to="." method="join_server"]
[connection signal="text_changed" from="Menu/GameCode" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="Menu/PlayerName" to="." method="_on_PlayerName_text_changed"]
